// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YhteystietoLomake Change lang creates needed yhteystietos 1`] = `
Array [
  Object {
    "kieli": "kieli_fi#1",
    "osoite": "",
    "osoiteTyyppi": "posti",
    "postinumeroUri": "",
    "postitoimipaikka": "",
  },
  Object {
    "kieli": "kieli_fi#1",
    "osoite": "",
    "osoiteTyyppi": "kaynti",
    "postinumeroUri": "",
    "postitoimipaikka": "",
  },
  Object {
    "kieli": "kieli_fi#1",
    "numero": "",
  },
  Object {
    "email": "",
    "kieli": "kieli_fi#1",
  },
  Object {
    "kieli": "kieli_fi#1",
    "www": "",
  },
  Object {
    "kieli": "test",
    "osoite": "",
    "osoiteTyyppi": "posti",
    "postinumeroUri": "",
    "postitoimipaikka": "",
  },
  Object {
    "kieli": "test",
    "osoite": "",
    "osoiteTyyppi": "kaynti",
    "postinumeroUri": "",
    "postitoimipaikka": "",
  },
  Object {
    "kieli": "test",
    "numero": "",
  },
  Object {
    "email": "",
    "kieli": "test",
  },
  Object {
    "kieli": "test",
    "www": "",
  },
]
`;

exports[`YhteystietoLomake Checkbox Copies posti to kaynti when checked 1`] = `
Array [
  Array [
    Object {
      "name": "yhteystiedot",
      "value": Array [
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "testi",
          "osoiteTyyppi": "posti",
        },
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "testi",
          "osoiteTyyppi": "kaynti",
          "postinumeroUri": undefined,
          "postitoimipaikka": "",
        },
        Object {
          "kieli": "kieli_fi#1",
          "numero": "",
        },
        Object {
          "email": "",
          "kieli": "kieli_fi#1",
        },
        Object {
          "kieli": "kieli_fi#1",
          "www": "",
        },
      ],
    },
  ],
]
`;

exports[`YhteystietoLomake Rendering Renders without crashing 1`] = `
<div
  className="UloinKehys"
>
  <div
    className="Rivi"
  >
    <div
      className="Kentta"
    >
      <Component
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Suomeksi",
              "value": "kieli_fi#1",
            },
            Object {
              "label": "Ruotsiksi",
              "value": "kieli_sv#1",
            },
            Object {
              "label": "Englanniksi",
              "value": "kieli_en#1",
            },
          ]
        }
        value="kieli_fi#1"
      />
    </div>
  </div>
  <div
    className="Rivi"
  >
    <ForwardRef
      checked={false}
      id="checkbox"
      onChange={[Function]}
    >
      YHTEYSTIEDOT_POSTIOSOITE_ON_SAMA_KUIN_KAYNTIOSOITE
    </ForwardRef>
  </div>
  <div
    className="Rivi"
  >
    <div
      className="Kentta"
    >
      <label>
        YHTEYSTIEDOT_POSTIOSOITE
      </label>
      <ForwardRef
        name="posti.osoite"
        onChange={[Function]}
        value=""
      />
    </div>
    <div
      className="KenttaLyhyt"
    >
      <label>
        YHTEYSTIEDOT_POSTINUMERO
      </label>
      <ForwardRef
        name="posti.postinumeroUri"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <div
    className="Rivi"
  >
    <div
      className="Kentta"
    >
      <label>
        YHTEYSTIEDOT_KAYNTIOSOITE
      </label>
      <ForwardRef
        disabled={false}
        name="kaynti.osoite"
        onChange={[Function]}
        value=""
      />
    </div>
    <div
      className="KenttaLyhyt"
    >
      <label>
        YHTEYSTIEDOT_POSTINUMERO
      </label>
      <ForwardRef
        disabled={false}
        name="kaynti.postinumeroUri"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <div
    className="Rivi"
  >
    <div
      className="Kentta"
    >
      <label>
        YHTEYSTIEDOT_PUHELINNUMERO
      </label>
      <ForwardRef
        name="numero"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <div
    className="Rivi"
  >
    <div
      className="Kentta"
    >
      <label>
        YHTEYSTIEDOT_SAHKOPOSTIOSOITE
      </label>
      <ForwardRef
        name="email"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <div
    className="Rivi"
  >
    <div
      className="Kentta"
    >
      <label>
        YHTEYSTIEDOT_WWW_OSOITE
      </label>
      <ForwardRef
        name="www"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`YhteystietoLomake Update address kaynti 1`] = `
Array [
  Array [
    Object {
      "name": "yhteystiedot",
      "value": Array [
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "",
          "osoiteTyyppi": "posti",
          "postinumeroUri": "",
          "postitoimipaikka": "",
        },
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "test",
          "osoiteTyyppi": "kaynti",
          "postinumeroUri": "",
          "postitoimipaikka": "",
        },
        Object {
          "kieli": "kieli_fi#1",
          "numero": "",
        },
        Object {
          "email": "",
          "kieli": "kieli_fi#1",
        },
        Object {
          "kieli": "kieli_fi#1",
          "www": "",
        },
      ],
    },
  ],
]
`;

exports[`YhteystietoLomake Update address posti 1`] = `
Array [
  Array [
    Object {
      "name": "yhteystiedot",
      "value": Array [
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "test",
          "osoiteTyyppi": "posti",
          "postinumeroUri": "",
          "postitoimipaikka": "",
        },
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "",
          "osoiteTyyppi": "kaynti",
          "postinumeroUri": "",
          "postitoimipaikka": "",
        },
        Object {
          "kieli": "kieli_fi#1",
          "numero": "",
        },
        Object {
          "email": "",
          "kieli": "kieli_fi#1",
        },
        Object {
          "kieli": "kieli_fi#1",
          "www": "",
        },
      ],
    },
  ],
]
`;

exports[`YhteystietoLomake Update field email 1`] = `
Array [
  Array [
    Object {
      "name": "yhteystiedot",
      "value": Array [
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "",
          "osoiteTyyppi": "posti",
          "postinumeroUri": "",
          "postitoimipaikka": "",
        },
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "",
          "osoiteTyyppi": "kaynti",
          "postinumeroUri": "",
          "postitoimipaikka": "",
        },
        Object {
          "kieli": "kieli_fi#1",
          "numero": "",
        },
        Object {
          "email": "test",
          "kieli": "kieli_fi#1",
        },
        Object {
          "kieli": "kieli_fi#1",
          "www": "",
        },
      ],
    },
  ],
]
`;

exports[`YhteystietoLomake Update field numero 1`] = `
Array [
  Array [
    Object {
      "name": "yhteystiedot",
      "value": Array [
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "",
          "osoiteTyyppi": "posti",
          "postinumeroUri": "",
          "postitoimipaikka": "",
        },
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "",
          "osoiteTyyppi": "kaynti",
          "postinumeroUri": "",
          "postitoimipaikka": "",
        },
        Object {
          "kieli": "kieli_fi#1",
          "numero": "test",
        },
        Object {
          "email": "",
          "kieli": "kieli_fi#1",
        },
        Object {
          "kieli": "kieli_fi#1",
          "www": "",
        },
      ],
    },
  ],
]
`;

exports[`YhteystietoLomake Update field www 1`] = `
Array [
  Array [
    Object {
      "name": "yhteystiedot",
      "value": Array [
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "",
          "osoiteTyyppi": "posti",
          "postinumeroUri": "",
          "postitoimipaikka": "",
        },
        Object {
          "kieli": "kieli_fi#1",
          "osoite": "",
          "osoiteTyyppi": "kaynti",
          "postinumeroUri": "",
          "postitoimipaikka": "",
        },
        Object {
          "kieli": "kieli_fi#1",
          "numero": "",
        },
        Object {
          "email": "",
          "kieli": "kieli_fi#1",
        },
        Object {
          "kieli": "kieli_fi#1",
          "www": "test",
        },
      ],
    },
  ],
]
`;
